UI: use 100dvh on app wrapper to fix Android bottom toolbar overlap

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@
 html, body {
   width: 100%;
   height: 100%;
+  height: 100dvh;
   overflow: hidden;
   font-family: var(--font);
   font-size: 13px;
@@ -70,6 +71,7 @@ body::before {
   flex-direction: column;
   width: 100%;
   height: 100%;
+  height: 100dvh;
   position: relative;
   z-index: 1;
 }
